# cppcon_benchmarks

./: CMakeLists.txt  generate_plots.py  generate_plots2.py  main.hpp  run.sh
benchmarks/: CMakeLists.txt
benchmarks/adj_diff/: CMakeLists.txt  main.cpp
benchmarks/for_each_comp/: CMakeLists.txt  main.cpp
benchmarks/for_each_comp_sr/: CMakeLists.txt  main.cpp
benchmarks/for_each_mem/: CMakeLists.txt  main.cpp
benchmarks/for_each_mem_sr/: CMakeLists.txt  main.cpp
benchmarks/for_each_mem_sr_full/: CMakeLists.txt  main.cpp
benchmarks/reverse/: CMakeLists.txt  main.cpp
benchmarks_results/Intel_IceLake/: CTestTestfile.cmake  build.ninja  cmake_install.cmake  plots.txt
benchmarks_results/Intel_IceLake/benchmarks/: cmake_install.cmake
benchmarks_results/Intel_IceLake_dryrun/: CMakeCache.txt
benchmarks_results/Intel_IceLake_dryrun/benchmarks/: CTestTestfile.cmake
benchmarks_results/amd_epyc_7352_x2/: CTestTestfile.cmake  cmake_install.cmake  machine_info.txt
benchmarks_results/amd_epyc_7352_x2/adj_diff/: CTestTestfile.cmake  adj_diff  cmake_install.cmake
benchmarks_results/amd_epyc_7352_x2/for_each_comp/: CTestTestfile.cmake  cmake_install.cmake  for_each_comp
benchmarks_results/amd_epyc_7H12_x2/: CTestTestfile.cmake  cmake_install.cmake  plots.txt
benchmarks_results/intel_icelake/: CTestTestfile.cmake  cmake_install.cmake  machine_info.txt  plots.txt
benchmarks_results/intel_skylake/: CTestTestfile.cmake  cmake_install.cmake  machine_info.txt  plots.txt
for_each_comp/: main.cpp
for_each_mem/: main.cpp
(+242 files in other folders)
